--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <h2></h2>
+    <h2><a href="./checkName.html">LOL英雄查询</a></h2>
+    <h2><a href="./02.demo-英雄查询/index.html">LOL英雄查询</a></h2>
+    <h2><a href="./readjokes.html">随机笑话</a></h2>
+    <h2><a href="./天知道/天气预报.html">查天气</a></h2>
+    <h2><a href="./聊天机器人/聊天机器人.html">聊天机器人</a></h2>
+    <h2><a href="./英雄检索/案例-自己敲得.html">英雄检索</a></h2>
+    <h2><a href="./英雄分页/案例-自己敲得.html">英雄分页</a></h2>
 </body>
+
 </html>
