用meta升级了聊天机器人的http请求

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <h2><a href="./checkName.html">LOL英雄查询</a></h2>
-    <h2><a href="./02.demo-英雄查询/index.html">LOL英雄查询</a></h2>
-    <h2><a href="./readjokes.html">随机笑话</a></h2>
-    <h2><a href="./天知道/天气预报.html">查天气</a></h2>
-    <h2><a href="./聊天机器人/聊天机器人.html">聊天机器人</a></h2>
-    <h2><a href="./英雄检索/案例-自己敲得.html">英雄检索</a></h2>
-    <h2><a href="./英雄分页/案例-自己敲得.html">英雄分页</a></h2>
+    <ul>
+        <li><a href="./checkName.html">LOL英雄查询</a></li>
+        <li><a href="./02.demo-英雄查询/index.html">LOL英雄查询</a></li>
+        <li><a href="./readjokes.html">随机笑话</a></li>
+        <li><a href="./天知道/天气预报.html">查天气</a></li>
+        <li><a href="./聊天机器人/聊天机器人.html">聊天机器人</a></li>
+        <li><a href="./英雄检索/案例-自己敲得.html">英雄检索</a></li>
+        <li><a href="./英雄分页/案例-自己敲得.html">英雄分页</a></li>
+    </ul>
 </body>
 
 </html>
