修改了“英雄检索”中“随机背景图”的https&修改了主页链接的打开方式

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <ul>
-        <li><a href="./checkName.html">LOL英雄查询</a></li>
-        <li><a href="./02.demo-英雄查询/index.html">LOL英雄查询</a></li>
-        <li><a href="./readjokes.html">随机笑话</a></li>
-        <li><a href="./天知道/天气预报.html">查天气</a></li>
-        <li><a href="./聊天机器人/聊天机器人.html">聊天机器人</a></li>
-        <li><a href="./英雄检索/案例-自己敲得.html">英雄检索</a></li>
-        <li><a href="./英雄分页/案例-自己敲得.html">英雄分页</a></li>
+        <li><a target="_" href="./checkName.html">LOL英雄查询</a></li>
+        <li><a target="_" href="./02.demo-英雄查询/index.html">LOL英雄查询</a></li>
+        <li><a target="_" href="./readjokes.html">随机笑话</a></li>
+        <li><a target="_" href="./天知道/天气预报.html">查天气</a></li>
+        <li><a target="_" href="./聊天机器人/聊天机器人.html">聊天机器人</a></li>
+        <li><a target="_" href="./英雄检索/案例-自己敲得.html">英雄检索</a></li>
+        <li><a target="_" href="./英雄分页/案例-自己敲得.html">英雄分页</a></li>
     </ul>
 </body>
 
