--- a/英雄检索/案例-自己敲得.html
+++ b/英雄检索/案例-自己敲得.html
@@ -101,7 +101,8 @@
         url: 'http://acg.bakayun.cn/randbg.php',
         data: {
           Type: 'json',
-          t: 'dfproject'
+          t: 'dfproject',
+          https:true
         },
         type: 'GET',
         dataType: 'json',
