增加了canvas演示文档

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a target="_" href="./聊天机器人/聊天机器人.html">聊天机器人</a></li>
         <li><a target="_" href="./英雄检索/案例-自己敲得.html">英雄检索</a></li>
         <li><a target="_" href="./英雄分页/案例-自己敲得.html">英雄分页</a></li>
+        <li><a target="_" href="./html5-canvas-fireworks-celebrate/index.html">canvas演示</a></li>
     </ul>
 </body>
 
