--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <title>Document</title>
+    <style>
+    a:visited{
+        text-decoration: none;
+    }
+    </style>
 </head>
 
 <body>
