--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <title>Document</title>
     <style>
-    a:visited{
+    a{
         text-decoration: none;
+    }
+    a:hover{
+        color: red
     }
     </style>
 </head>
@@ -17,7 +20,7 @@
 <body>
     <ul>
         <li><a target="_" href="./checkName.html">LOL英雄查询</a></li>
-        <li><a target="_" href="./02.demo-英雄查询/index.html">LOL英雄查询</a></li>
+        <li><a target="_" href="./英雄信息查询/index.html">LOL英雄资料查询</a></li>
         <li><a target="_" href="./readjokes.html">随机笑话</a></li>
         <li><a target="_" href="./天知道/天气预报.html">查天气</a></li>
         <li><a target="_" href="./聊天机器人/聊天机器人.html">聊天机器人</a></li>
